# negotiator-hacknation

./: .gitignore  CLAUDE.md  README.md  app.py  bugs.md  index.html  pyproject.toml
bench/: llm_bench.py
bench/results/: VERDICT.md  answers.md  latency.json
counteragents/: README.md  lowball_broker.json  pressure_closer.json  rushed_dispatcher.json
docs/: bio-metaphors.md  call-architecture.md  inherit-vs-build.md  narrative.md  neuro-architecture.md  research.md  spec.md
negotiator/: __init__.py
negotiator/brain/: __init__.py  fsm.py  ledger.py  opponent.py  stance.py  strategist.py
negotiator/call/: __init__.py  arbiter.py  firewall.py  gate.py  prosody.py  stt.py  talker.py  tts.py
negotiator/core/: __init__.py  bus.py  journal.py
negotiator/dashboard/: README.md  package-lock.json  package.json  vite.config.ts
negotiator/fixtures/: bluff_corpus.jsonl  card_leverage.json  estimator_golden.json  estimator_webhook.json  fmcsa_fallback.json  fsm_smoke.jsonl  full_run.jsonl  injection_corpus.jsonl  (+11 more)
tests/: test_arbiter.py  test_arena.py  test_bug_regressions_01_14.py  test_bug_regressions_15_25.py  test_bug_regressions_29_39.py  test_bug_regressions_40_44.py  test_bug_regressions_45_46.py  test_bug_regressions_48_54.py  test_bug_regressions_55.py  test_bus_journal.py  test_contracts.py  test_duet.py  test_el_ws.py  test_estimator.py  test_fsm.py  test_gate.py  test_latency_report.py  test_ledger.py  test_opponent.py  test_phase7.py  test_product_loop.py  test_prosody.py  test_stance.py  test_strategist.py  test_stt.py  test_talker.py  test_tts.py
(+51 files in other folders)
