[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "negotiator"
version = "0.1.0"
description = "Evidence-first voice negotiation runtime"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7,<3", "PyYAML>=6,<7"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
openai = ["openai>=2,<3"]
voice = ["websockets>=13,<16"]

[tool.hatch.build.targets.wheel]
packages = ["negotiator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
